<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableRow
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"
            android:text="@string/label_number_of_checkins" />

        <TextView
            android:id="@+id/number_of_checkins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>


    <TableRow
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"
            android:text="@string/label_number_of_checkouts" />

        <TextView
            android:id="@+id/number_of_checkouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"
            android:text="@string/label_number_of_unsynched_activities" />

        <TextView
            android:id="@+id/number_of_unsynched_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

</TableLayout>
